# claude-plugins-public

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  PERSONA_SUBAGENTS_STRATEGY.md  README.md  SECURITY.md
.claude/: README.md
.claude-plugin/: marketplace.json
.claude/agents/: agent-architect.md  archivist.md  backend-architect.md  conductor.md  git-historian.md  librarian.md  process-cartographer.md  qa-engineer.md  systems-thinker.md  temporal-validator.md  tui-specialist.md
.claude/commands/: reflect-on.md
.claude/concepts/: index.md
.claude/conventions/: coordination.md  timezone.md  transcript-sync.md
.claude/docs/: agent-traceability.md
.claude/governance/: agent-lifecycle.md  deprecation-queue.md  health-review-2025-12-15.md
.claude/guides/: persona-memory-pattern.md
.claude/registry/: agents-complete.md  agents.md  processes.md  validations.md
.claude/scripts/: purge-sensitive-history.sh
.claude/visualizations/: concept-graph.html
.github/workflows/: voice-quality.yml
apps/kg-explorer/: docker-compose.yml  package-lock.json  package.json  tsconfig.json
apps/kg-explorer/docs/: iteration-1-conductor-assessment.md
apps/kg-explorer/docs-site/: .gitignore  README.md  tsconfig.json
apps/kg-explorer/rust-components/: Cargo.toml  README.md
apps/kg-explorer/rust-components/kg-embeddings/: Cargo.toml
apps/kg-explorer/rust-components/kg-embeddings/benches/: embedding_benchmarks.rs
apps/kg-explorer/rust-components/kg-graph-ops/: Cargo.toml
apps/kg-explorer/rust-components/kg-graph-ops/benches/: graph_benchmarks.rs
apps/kg-explorer/rust-components/kg-query-engine/: Cargo.toml
apps/kg-explorer/rust-components/kg-query-engine/benches/: query_benchmarks.rs
apps/kg-explorer/rust-components/kg-query-engine/src/: ast.rs  lib.rs  optimizer.rs  parser.rs  planner.rs
apps/kg-explorer/rust-components/kg-temporal/: Cargo.toml
apps/kg-explorer/rust-components/kg-temporal/benches/: temporal_benchmarks.rs
plugins/Schedule.md/: .env.example  .gitignore  CLAUDE.md  README.md  package.json  tsconfig.json
plugins/Schedule.md/.claude-plugin/: plugin.json
plugins/Schedule.md/agents/: timekeeper.md
plugins/Schedule.md/commands/: schedule.md
plugins/Schedule.md/schedule/: config.json
plugins/Schedule.md/src/: cli.ts  index.ts
plugins/agentnet/: CHANGELOG.md  COLLABORATION.md  QA.md  README.md  TUI_ANALYSIS.md  package.json  tsconfig.json
plugins/agentnet/.claude-plugin/: plugin.json
plugins/agentnet/agents/: engineer.md  social-curator.md
plugins/agentnet/commands/: social.md
plugins/agentnet/docs/: AUTOPOST_COMPARISON.md  AUTOPOST_HOOK_DESIGN.md  AUTOPOST_HOOK_FLOW.md  AUTOPOST_HOOK_SUMMARY.md  AUTOPOST_INDEX.md
plugins/agentnet/hooks/: autopost.py
plugins/agentnet/src/: cli.ts  index.ts
plugins/agents/.claude-plugin/: plugin.json
plugins/agents/agents/: orchestrator.md
plugins/autocommit/: README.md
plugins/autocommit/.claude-plugin/: plugin.json
plugins/autocommit/commands/: commit.md  organize.md  status.md
plugins/autocommit/hooks/: autocommit-wrapper.sh  autocommit.py
plugins/awareness/: README.md  ROADMAP.md
plugins/awareness/.claude-plugin/: plugin.json
plugins/awareness/agents/: mentor.md  style.md
plugins/awareness/commands/: learn.md  mentor.md
plugins/brainstorm/.claude-plugin/: plugin.json
plugins/brainstorm/agents/: muse.md
plugins/browser/.claude-plugin/: plugin.json
plugins/browser/commands/: tabs.md
plugins/browser/tools/: brave-tabs.py
plugins/cards/: .gitignore  README.md
plugins/cards/.claude-plugin/: plugin.json
plugins/cards/agents/: morphologist.md
plugins/company/: README.md
plugins/company/.claude-plugin/: plugin.json
plugins/company/agents/: board-mentor.md  ceo.md  cfo.md  chief-of-staff.md  cto.md
plugins/company/hooks/: session-start.py
plugins/company/output-styles/: board-mentor.md
plugins/conductor/: README.md
plugins/conductor/.claude-plugin/: plugin.json
plugins/conductor/commands/: conductor.md
plugins/conductor/hooks/: session-end.py  session-start.py
plugins/cook/: ARCHITECTURE.md  CLAUDE.md
plugins/cook/agents/: cook.md  (+2 more)
plugins/evaluation/: pyproject.toml
plugins/evaluation/.claude-plugin/: plugin.json
plugins/evaluation/agents/: evaluator.md
plugins/evaluation/commands/: eval.md
plugins/evaluation/skills/evaluation-master/: SKILL.md
plugins/evaluation/skills/evaluation-master/subskills/: baseline-mgmt.md  briefing-eval.md  extraction-eval.md  hipporag-setup.md  regression.md
plugins/evaluation/src/: __init__.py  cli.py  dimensions.py  evaluator.py  metrics.py
plugins/exploration/: ARCHITECTURE.md  README.md
plugins/hipporag/: README.md
plugins/interface/: README.md
plugins/journal/: README.md
plugins/logging/: IMPROVEMENTS.md  LOG_SEARCH_DESIGN.md  README.md
plugins/memory/: .gitignore
plugins/messages/: .gitignore  package.json  upload-server.py
plugins/observatory/: README.md  package.json  tsconfig.json
plugins/perf/: README.md
plugins/plug/: .gitignore  CLAUDE.md  README.md  plug.lua
plugins/projects/: CLAUDE.md  package.json  tsconfig.json
plugins/search/: ROADMAP.md
plugins/statusline/: README.md  REFACTOR.md  ROADMAP.md
plugins/temporal/: README.md
plugins/transcripts/: get-newest.ts  package-lock.json  package.json  subscribe-channels.ts  test-extraction.ts  test-queue.ts  test-reconcile.ts  test-youtube.ts
plugins/voice/: ARCHITECTURE.md  package.json  tsconfig.json
plugins/voice/native/audio-buffer-napi/: Cargo.toml  build.rs
plugins/voice/native/audio-buffer-napi/src/: lib.rs  pipewire_backend.rs
plugins/voice/native/audio-buffer-napi/src/backend/: mock.rs  mod.rs
plugins/voice/native/audio-buffer-napi/src/buffer/: health.rs  mod.rs  ring.rs
plugins/voice/native/audio-buffer-napi/src/ducking/: mod.rs
scripts/: aggregate-plugin-agents.sh  extract_user_prompts.py  fix-journal-links.py
specs/: logging-plugin-design.md  logging-plugin-requirements.md  logging-plugin-spec.md  logging-plugin-stakeholder-interview.md
specs/omnimind-hybrid-search/: ARCHITECTURE.md
(+970 files in other folders)
