[project]
name = "evaluation-plugin"
version = "0.1.0"
description = "Automated system evaluation for claude-plugins ecosystem"
requires-python = ">=3.10"
dependencies = [
    "hipporag>=0.1.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
