[package]
name = "kg-temporal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bi-temporal indexing for versioned knowledge graphs with time-travel queries"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["parallel", "compression"]
parallel = ["rayon"]
compression = ["lz4_flex", "zstd"]
wasm = ["wasm-bindgen", "js-sys"]
mmap = ["memmap2"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
lz4_flex = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
hashbrown = { workspace = true }
smallvec = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "temporal_benchmarks"
harness = false
